# ai_reviewer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  main.py  pyproject.toml
.github/workflows/: ci_cd.yaml
domain/pull_requests/: events.py  models.py  repository.py  route.py  schemas.py  service.py
domain/reviews/: events.py  models.py  repository.py  route.py  schemas.py  service.py
shared/: clients.py  database.py  events.py  exceptions.py
terraform/: data.tf  main.tf  output.tf  terraform.tf  variables.tf
