[tool.poetry]
name = "ai-reviewer"
version = "0.1.0"
description = "AI tool to review your pull requests!"
authors = ["Khalil"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.135.1,<0.136.0"
asyncpg = ">=0.31.0,<0.32.0"
pydantic = ">=2.12.5,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
sqlalchemy = ">=2.0.48,<3.0.0"
anthropic = ">=0.85.0,<0.86.0"
pygithub = ">=2.8.1,<3.0.0"
redis = ">=7.3.0,<8.0.0"
uvicorn = ">=0.42.0,<0.43.0"
pydantic-settings = ">=2.13.1,<3.0.0"
tenacity = ">=9.1.4,<10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
mypy = "^1.19.1"
ruff = "^0.15.6"
httpx = "^0.28.1"
pre-commit = "^4.5.1"